--- a/ApiProjeKampi.WebUI/ApiProjeKampi.WebUI.csproj
+++ b/ApiProjeKampi.WebUI/ApiProjeKampi.WebUI.csproj
@@ -16,4 +16,8 @@
       <Folder Include="Pages\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
